# Ophidius-Rex

./: .gitignore  README.md  Snake.cabal  stack.yaml
app/: Main.hs
src/Snake/: Core.hs  Interactive.hs  Lenses.hs  Render.hs  Types.hs
