name:                Snake
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/SwiftsNamesake/Snake#readme
license:             MIT
license-file:        LICENSE.md
author:              Jonatan H Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           (c) Jonatan H Sundqvist, &lt;year&gt;
category:            &lt;category&gt;
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Snake.Core, Snake.Render, Snake.Types, Snake.Lenses, Snake.Interactive
  build-depends:       base >= 4.7 && < 5,
                       GLFW-b,
                       transformers,
                       OpenGL     >=2.13.2.1,
                       OpenGLRaw  >=2.6.1.1,
                       GLUtil     >=0.8.8,
                       linear     >=1.19.1.3,
                       lens       >=4.12.3,
                       filepath   >=1.4.0.0,
                       lens       >=4.12.3,
                       containers >=0.5.6.2,
                       Cartesian  >=0.2.0.0,
                       Michelangelo
  default-language:    Haskell2010

executable Snake-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       Snake
  default-language:    Haskell2010

test-suite Snake-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       Snake
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SwiftsNamesake/Snake
